Fix "Contribution" titles causing layout issue

--- a/singulinkfx/styles/singulink.css
+++ b/singulinkfx/styles/singulink.css
@@ -934,7 +934,7 @@ table td p {
     margin-block-start: 30px
 }
 
-#contribution {
+.contribution {
     float: right;
     margin-top: 1.1em;
     position: relative;
